--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -19,6 +19,8 @@ atproto_core:
 - packages/atproto_core/**/*
 lexicon:
 - packages/lexicon/**/*
+did_plc:
+- packages/did_plc/**/*
 atproto:
 - packages/atproto/**/*
 bluesky_text:
@@ -74,6 +76,7 @@ test:
 - packages/multiformats/test/**/*.dart
 - packages/atproto_test/test/**/*.dart
 - packages/atproto_core/test/**/*.dart
+- packages/did_plc/test/**/*.dart
 - packages/atproto/test/**/*.dart
 - packages/bluesky_text/test/**/*.dart
 - packages/bluesky/test/**/*.dart
@@ -95,6 +98,8 @@ documentation:
 - packages/atproto_test/README.md
 - packages/atproto_core/CHANGELOG.md
 - packages/atproto_core/README.md
+- packages/did_plc/CHANGELOG.md
+- packages/did_plc/README.md
 - packages/atproto/CHANGELOG.md
 - packages/atproto/README.md
 - packages/bluesky_text/CHANGELOG.md
