--- a/packages/bluesky_text/pubspec.yaml
+++ b/packages/bluesky_text/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bluesky_text
-description: Provides the easiest and most powerful way to analyze the text on Bluesky Social.
-version: 0.6.0
+description: Provides the easiest and most powerful way to analyze the text for Bluesky Social.
+version: 0.6.1
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky_text
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
