--- a/packages/bluesky_post/action.yaml
+++ b/packages/bluesky_post/action.yaml
@@ -8,6 +8,8 @@ inputs:
     description: File path of the media to be attached to the Post.
   media-alt:
     description: Alt Text to be assigned to uploaded Media.
+  link-preview-url:
+    description: URL for link preview.
   langs:
     description: A collection of well-formed BCP47 language tags in CSV format.
   labels:
