--- a/packages/bluesky_post/pubspec.yaml
+++ b/packages/bluesky_post/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   actions_toolkit_dart: ^0.5.1
   bluesky: ^0.10.4
   bluesky_text: ^0.6.2
+  http: ^1.1.0
 
 dev_dependencies:
   lints: ^2.0.1
