--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "Doxxing",
     "embeddable",
     "Facetable",
+    "feedgen",
     "fullsize",
     "groupable",
     "icann",
@@ -61,6 +62,7 @@
     "Unmute",
     "Unspecced",
     "upvote",
+    "userlist",
     "writeln",
     "xrpc"
   ],
