--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,15 +1,6 @@
-# This file configures the static analysis results for your project (errors,
-# warnings, and lints).
-#
-# This enables the 'recommended' set of lints from `package:lints`.
-# This set helps identify many issues that may lead to problems when running
-# or consuming Dart code, and enforces writing Dart using a single, idiomatic
-# style and format.
-#
-# If you want a smaller set of lints you can change this to specify
-# 'package:lints/core.yaml'. These are just the most critical lints
-# (the recommended set includes the core lints).
-# The core lints are also what is used by pub.dev for scoring packages.
+# Analysis options for AT Protocol Dart monorepo
+# This configuration provides strict linting rules for high-quality Dart code
+# while accommodating code generation patterns used in this project.
 
 include: package:lints/recommended.yaml
 
@@ -17,36 +8,168 @@ analyzer:
   exclude:
     - "**/*.freezed.dart"
     - "**/*.g.dart"
+    - "**/*.gr.dart"
+    - "**/generated/**"
+    - "build/**"
+    - ".dart_tool/**"
+  
   errors:
+    # Allow invalid annotation targets for code generation
     invalid_annotation_target: ignore
+    # Treat missing returns as errors
+    missing_return: error
+    # Treat dead code as warnings
+    dead_code: warning
+    # Treat unused imports as warnings
+    unused_import: warning
+    # Treat unused local variables as warnings
+    unused_local_variable: warning
+
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
 
 linter:
   rules:
-    - avoid_null_checks_in_equality_operators
-    - avoid_unused_constructor_parameters
-    - await_only_futures
-    - camel_case_types
-    - cancel_subscriptions
-    - comment_references
-    - constant_identifier_names
-    - control_flow_in_finally
-    - empty_statements
-    - hash_and_equals
-    - implementation_imports
-    - collection_methods_unrelated_type
-    - library_names
-    - library_prefixes
-    - non_constant_identifier_names
-    - overridden_fields
+    # Prefer relative imports for better maintainability in monorepo
+    - prefer_relative_imports
+    
+    # Documentation and API design
     - package_api_docs
-    - package_names
-    - package_prefixed_library_names
-    - prefer_final_fields
-    - prefer_generic_function_type_aliases
-    - prefer_typing_uninitialized_variables
+    - public_member_api_docs
+    - comment_references
+    
+    # Error handling and safety
+    - avoid_catching_errors
+    - avoid_slow_async_io
+    - cancel_subscriptions
+    - close_sinks
+    - literal_only_boolean_expressions
+    - no_adjacent_strings_in_list
     - test_types_in_equals
     - throw_in_finally
+    - unawaited_futures
+    - unsafe_html
+    - use_build_context_synchronously
+    
+    # Performance and efficiency
+    - avoid_function_literals_in_foreach_calls
+    - avoid_renaming_method_parameters
+    - prefer_const_constructors
+    - prefer_const_constructors_in_immutables
+    - prefer_const_declarations
+    - prefer_const_literals_to_create_immutables
+    - prefer_final_fields
+    - prefer_final_in_for_each
+    - prefer_final_locals
+    - unnecessary_lambdas
+    - unnecessary_parenthesis
+    
+    # Code style and readability
+    - always_declare_return_types
+    - always_put_required_named_parameters_first
+    - avoid_bool_literals_in_conditional_expressions
+    - avoid_double_and_int_checks
+    - avoid_empty_else
+    - avoid_equals_and_hash_code_on_mutable_classes
+    - avoid_escaping_inner_quotes
+    - avoid_field_initializers_in_const_classes
+    - avoid_implementing_value_types
+    - avoid_init_to_null
+    - avoid_multiple_declarations_per_line
+    - avoid_null_checks_in_equality_operators
+    - avoid_positional_boolean_parameters
+    - avoid_redundant_argument_values
+    - avoid_returning_null_for_void
+    - avoid_setters_without_getters
+    - avoid_single_cascade_in_expression_statements
+    - avoid_unnecessary_containers
+    - avoid_unused_constructor_parameters
+    - avoid_void_async
+    - cascade_invocations
+    - cast_nullable_to_non_nullable
+    - conditional_uri_does_not_exist
+    - deprecated_consistency
+    - directives_ordering
+    - empty_catches
+    - empty_constructor_bodies
+    - eol_at_end_of_file
+    - exhaustive_cases
+    - join_return_with_assignment
+    - leading_newlines_in_multiline_strings
+    - missing_whitespace_between_adjacent_strings
+    - no_default_cases
+    - noop_primitive_operations
+    - null_check_on_nullable_type_parameter
+    - omit_local_variable_types
+    - one_member_abstracts
+    - only_throw_errors
+    - overridden_fields
+    - parameter_assignments
+    - prefer_adjacent_string_concatenation
+    - prefer_asserts_in_initializer_lists
+    - prefer_collection_literals
+    - prefer_conditional_assignment
+    - prefer_constructors_over_static_methods
+    - prefer_contains
+    - prefer_expression_function_bodies
+    - prefer_for_elements_to_map_fromIterable
+    - prefer_function_declarations_over_variables
+    - prefer_generic_function_type_aliases
+    - prefer_if_elements_to_conditional_expressions
+    - prefer_if_null_operators
+    - prefer_initializing_formals
+    - prefer_inlined_adds
+    - prefer_interpolation_to_compose_strings
+    - prefer_is_empty
+    - prefer_is_not_empty
+    - prefer_is_not_operator
+    - prefer_iterable_whereType
+    - prefer_null_aware_method_calls
+    - prefer_null_aware_operators
+    - prefer_single_quotes
+    - prefer_spread_collections
+    - prefer_typing_uninitialized_variables
+    - provide_deprecation_message
+    - require_trailing_commas
+    - sized_box_for_whitespace
+    - sized_box_shrink_expand
+    - sort_child_properties_last
+    - sort_constructors_first
+    - sort_unnamed_constructors_first
+    - tighten_type_of_initializing_formals
+    - type_annotate_public_apis
+    - unnecessary_await_in_return
     - unnecessary_brace_in_string_interps
+    - unnecessary_const
+    - unnecessary_constructor_name
+    - unnecessary_getters_setters
+    - unnecessary_late
+    - unnecessary_new
+    - unnecessary_null_aware_assignments
+    - unnecessary_null_checks
+    - unnecessary_null_in_if_null_operators
+    - unnecessary_nullable_for_final_variable_declarations
+    - unnecessary_overrides
+    - unnecessary_raw_strings
+    - unnecessary_string_escapes
+    - unnecessary_string_interpolations
+    - unnecessary_this
     - unrelated_type_equality_checks
-    - lines_longer_than_80_chars
-    - prefer_relative_imports
+    - use_colored_box
+    - use_decorated_box
+    - use_enums
+    - use_full_hex_values_for_flutter_colors
+    - use_function_type_syntax_for_parameters
+    - use_if_null_to_convert_nulls_to_bools
+    - use_is_even_rather_than_modulo
+    - use_late_for_private_fields_and_variables
+    - use_named_constants
+    - use_raw_strings
+    - use_setters_to_change_properties
+    - use_string_buffers
+    - use_super_parameters
+    - use_test_throws_matchers
+    - use_to_and_as_if_applicable
+    - void_checks
